# quantitizer

./: .gitignore  README.md  pq_array.py  pyproject.toml  pytest.ini  quantitizer.py
docs/source/: conf.py  functions.rst  get_start.rst  index.rst
examples/: demo.py  demo2.py  demo3.py  demo4.py  fasttext example.ipynb  fasttext loader example.ipynb  word2vec example.ipynb
quantitizer/: __init__.py  _pq_array.py  pretrain.py  utils.py
quantitizer/integration/gensim/: fasttext.py  word2vec.py
scripts/: test.py
tests/: test_fasttext.py  test_quantitize.py
